Kevin_Garcia_#Commit5_contenido_deporte

--- a/paginas/cultura1.html
+++ b/paginas/cultura1.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="cultura1.css">
 <body>
     <h1>Cultura - Danza</h1>
+    <a href="index.html" class="volver">← Volver al inicio</a>
     <br>
     <h3>Características principales de la danza</h3>
     <br>
