Julian_Martinez_#Commit6_creacion_de_index

--- a/paginas/deporte1.html
+++ b/paginas/deporte1.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="cultura1.css">
 <body>
     <h1>Deporte- Basquetboll</h1>
-    <a href="index.html" class="volver">← Volver al inicio</a>
+    <a href="/index.html" class="volver">← Volver al inicio</a>
     <br>
     <h3>Características principales del Basquetboll</h3>
     <br>
