Kevin_Garcia_#Commit7_creacion_css

--- a/paginas/cultura1.html
+++ b/paginas/cultura1.html
@@ -2,7 +2,7 @@
 <html>
     <head></head>
     <title>Cultura</title>
-    <link rel="stylesheet" href="cultura1.css">
+    <link rel="stylesheet" href="/estilo/cultura1.css">
 <body>
     <h1>Cultura - Danza</h1>
     <a href="/index.html" class="volver">← Volver al inicio</a>
