--- a/paginas/deporte1.html
+++ b/paginas/deporte1.html
@@ -2,7 +2,7 @@
 <html>
     <head></head>
     <title>deporte </title>
-    <link rel="stylesheet" href="cultura1.css">
+    <link rel="stylesheet" href="/estilo/deporte1.css">
 <body>
     <h1>Deporte- Basquetboll</h1>
     <a href="/index.html" class="volver">← Volver al inicio</a>
