Julian_Martinez_#Commit8_nombres_completos

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
         </a>
     </main>
 
+    <footer>
+        <h2 class="nombres">Jose Julian Carmona Martinez<br>Kevin Martinez Garcia</h2>
+    </footer>
 </body>
 </html>
